                       - AccsData - CreatePreferenceDefaults - Default new ShowBankLinkFileNotFound pref to True so TfmBankLinkNoFileFound appears before user can press "Don't show this again".
                       - uPreferenceConsts - New const for ShowBankLinkFileNotFound.

[V4.5 R4.5] -
   20/10/20 /MK Change - MainUnit, NewRepUnit - Changed the word log in credentials on the prompt that appears to Username and Password - TGM request.

[V4.5 R4.4] -
   19/10/20 /MK Change - uBankImport - Added conts for Transaction Type.
                                     - Added new Bank Transfer Transaction Type.
                                     - FindAndPostNominal - If the Transaction Type is Bank Transfer then show banks listing, if the user selects the
                                                            same bank account as the transactions are being imported to give error and
                                                            don't allow the nominal to be set as this bank.
                                     - StoreNominalSelection - For Bank Transfer transactions set the Nominal and clear out the Enterprise.
                                     - erTransactionTypesPropertiesChange - If the Transaction Type is bank transfer then turn off the IsMultiLineTransaction.
                                     - InvokeSearchItem - If the Transaction Type is not Bank Transfer then pop up the Mult Line Editor screen.
                                     - BankImportGridTableViewEditing - Don't allow edit of Enterprise or Vat Code if Transaction type Pay/Receipt or Bank Transfer.
                                                                      - Allow edit of Customer/Supplier field if Transaction Type is anything other than Bank Transfer.
                                                                      - Allow edit of Quantity field if Transaction Type is Cashbook or Cash Sale/Purch.